syntax = "proto3";

enum Seat {
  SEAT_UNSPECIFIED = 0;
  ECONOMY = 1;
  PREMIUM_ECONOMY = 2;
  BUSINESS = 3;
  FIRST = 4;
}

enum Trip {
  TRIP_UNSPECIFIED = 0;
  ROUND_TRIP = 1;
  ONE_WAY = 2;
  MULTI_CITY = 3;
}

enum Passenger {
  PASSENGER_UNSPECIFIED = 0;
  ADULT = 1;
  CHILD = 2;
  INFANT_IN_SEAT = 3;
  INFANT_ON_LAP = 4;
}

message Airport {
  string airport = 2;
}

message FlightData {
  string date = 2;
  Airport from_flight = 13;
  Airport to_flight = 14;
}

message Info {
  repeated FlightData data = 3;
  repeated Passenger passengers = 8;
  Seat seat = 9;
  Trip trip = 19;
}

